--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,20 @@ repositories {
 }
 
 jar {
-
     manifest.attributes provider: 'gradle'
     baseName = 'javnetty'
     version = '1.0'
+}
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'main.Main'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
 
 dependencies {
