--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 jar {
     manifest.attributes provider: 'gradle'
-    baseName = 'javnetty'
+    baseName = 'httpd'
     version = '1.0'
 }
 
@@ -28,7 +28,7 @@ task fatJar(type: Jar) {
 
 dependencies {
     compile group: 'io.netty', name: 'netty-all', version: '4.1.5.Final'
-
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 }
 
 task wrapper(type: Wrapper) {
